syntax = "proto3";

option java_multiple_files = true;
option java_package = "playground.grpc";

package playground.grpc;

service Hello {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}
